force-app/main/default/objects/Dialpad__Call_Log__c/Dialpad__Call_Log__c.object-meta.xml
<CustomObject>
    <label>Dialpad Call Log</label>
    <nameField>
        <displayFormat>DCL-{0000000000}</displayFormat>
        <label>Call Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dialpad Call Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>