force-app/main/default/objects/Dialpad__Call_Log__c/fields/Dialpad__Ai_Action_Items_RichText__c.field-meta.xml
<CustomField>
    <fullName>Dialpad__Ai_Action_Items_RichText__c</fullName>
    <label>Ai Action Items</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>