force-app/main/default/objects/Dialpad__Call_Log__c/fields/Dialpad__AI_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Dialpad__AI_Outcome__c</fullName>
    <label>Ai Outcome</label>
    <length>255</length>
    <type>Text</type>
</CustomField>