force-app/main/default/objects/Dialpad__Call_Log__c/fields/Dialpad__AI_Playbook_Name__c.field-meta.xml
<CustomField>
    <fullName>Dialpad__AI_Playbook_Name__c</fullName>
    <label>Ai Playbook Name</label>
    <type>TextArea</type>
</CustomField>