force-app/main/default/objects/Dialpad__Call_Log__c/fields/Dialpad__CallDisposition__c.field-meta.xml
<CustomField>
    <fullName>Dialpad__CallDisposition__c</fullName>
    <label>Call Disposition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>