force-app/main/default/objects/Dialpad__Call_Log__c/fields/Dialpad__CallDispositionNotes__c.field-meta.xml
<CustomField>
    <fullName>Dialpad__CallDispositionNotes__c</fullName>
    <label>Call disposition notes</label>
    <type>TextArea</type>
</CustomField>