force-app/main/default/objects/Dialpad__Call_Log__c/fields/Dialpad__CallFrom__c.field-meta.xml
<CustomField>
    <fullName>Dialpad__CallFrom__c</fullName>
    <label>Call From</label>
    <type>TextArea</type>
</CustomField>