force-app/main/default/objects/Dialpad__Call_Log__c/fields/Dialpad__CallId__c.field-meta.xml
<CustomField>
    <fullName>Dialpad__CallId__c</fullName>
    <label>Call ID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>