force-app/main/default/objects/Dialpad__Call_Log__c/fields/Dialpad__CallQualityRating__c.field-meta.xml
<CustomField>
    <fullName>Dialpad__CallQualityRating__c</fullName>
    <label>Call Quality Rating</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>