force-app/main/default/objects/Dialpad__Call_Log__c/fields/Dialpad__CallTo__c.field-meta.xml
<CustomField>
    <fullName>Dialpad__CallTo__c</fullName>
    <label>Call To</label>
    <type>TextArea</type>
</CustomField>