force-app/main/default/objects/Dialpad__Call_Log__c/fields/Dialpad__CallType__c.field-meta.xml
<CustomField>
    <fullName>Dialpad__CallType__c</fullName>
    <label>Call Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>