force-app/main/default/objects/Dialpad__Call_Log__c/fields/Dialpad__ConnectedDuration__c.field-meta.xml
<CustomField>
    <fullName>Dialpad__ConnectedDuration__c</fullName>
    <label>Connected Duration</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>