force-app/main/default/objects/Dialpad__Call_Log__c/fields/Dialpad__Dialpad_Agents__c.field-meta.xml
<CustomField>
    <fullName>Dialpad__Dialpad_Agents__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dialpad Agents</label>
    <referenceTo>Dialpad__Dialpad_Agents__c</referenceTo>
    <relationshipName>CallLogs</relationshipName>
    <type>Lookup</type>
</CustomField>