force-app/main/default/objects/Dialpad__Call_Log__c/fields/Dialpad__Dialpad_Call_Center__c.field-meta.xml
<CustomField>
    <fullName>Dialpad__Dialpad_Call_Center__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dialpad Call Center</label>
    <referenceTo>Dialpad__Dialpad_Call_Centers__c</referenceTo>
    <relationshipName>CallLogs</relationshipName>
    <type>Lookup</type>
</CustomField>