force-app/main/default/objects/Dialpad__Call_Log__c/fields/Dialpad__Hourly_Breakup_rpt__c.field-meta.xml
<CustomField>
    <fullName>Dialpad__Hourly_Breakup_rpt__c</fullName>
    <formula>IF(
LEN( text(Dialpad__Time_in_Hours_rpt__c) ) = 1,
&apos;0&apos; + text(Dialpad__Time_in_Hours_rpt__c) + &apos;:00 - 0&apos; + text(Dialpad__Time_in_Hours_rpt__c) + &apos;:59&apos;,
text(Dialpad__Time_in_Hours_rpt__c) + &apos;:00 - &apos; + text(Dialpad__Time_in_Hours_rpt__c) + &apos;:59&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hourly Breakup</label>
    <type>Text</type>
</CustomField>