force-app/main/default/objects/Dialpad__Call_Log__c/fields/Dialpad__isValidatedCall__c.field-meta.xml
<CustomField>
    <fullName>Dialpad__isValidatedCall__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The flag can be used to check the if the call is valid or invalid.</description>
    <label>Validated Call</label>
    <type>Checkbox</type>
</CustomField>