force-app/main/default/objects/Dialpad__Call_Log__c/fields/Dialpad__Linked_Task_ID__c.field-meta.xml
<CustomField>
    <fullName>Dialpad__Linked_Task_ID__c</fullName>
    <label>Linked Task ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>