force-app/main/default/objects/Dialpad__Call_Log__c/fields/Dialpad__ParentObjectId__c.field-meta.xml
<CustomField>
    <fullName>Dialpad__ParentObjectId__c</fullName>
    <label>Parent Object ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>