force-app/main/default/objects/Dialpad__Call_Log__c/fields/Dialpad__Priority__c.field-meta.xml
<CustomField>
    <fullName>Dialpad__Priority__c</fullName>
    <defaultValue>&apos;Normal&apos;</defaultValue>
    <label>Priority</label>
    <length>255</length>
    <type>Text</type>
</CustomField>