force-app/main/default/objects/Dialpad__Call_Log__c/fields/Dialpad__Quality_Call__c.field-meta.xml
<CustomField>
    <fullName>Dialpad__Quality_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quality Call</label>
    <type>Checkbox</type>
</CustomField>