force-app/main/default/objects/Dialpad__Call_Log__c/fields/Dialpad__RingingDuration__c.field-meta.xml
<CustomField>
    <fullName>Dialpad__RingingDuration__c</fullName>
    <label>Ringing Duration</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>