force-app/main/default/objects/Dialpad__Call_Log__c/fields/Dialpad__Status__c.field-meta.xml
<CustomField>
    <fullName>Dialpad__Status__c</fullName>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>