force-app/main/default/objects/Dialpad__Call_Log__c/fields/Dialpad__Subject__c.field-meta.xml
<CustomField>
    <fullName>Dialpad__Subject__c</fullName>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>