force-app/main/default/objects/Dialpad__Call_Log__c/fields/Dialpad__Time_of_Call__c.field-meta.xml
<CustomField>
    <fullName>Dialpad__Time_of_Call__c</fullName>
    <inlineHelpText>Call Started</inlineHelpText>
    <label>Time of Call</label>
    <type>DateTime</type>
</CustomField>