force-app/main/default/objects/Dialpad__Call_Log__c/fields/Object_Account__c.field-meta.xml
<CustomField>
    <fullName>Object_Account__c</fullName>
    <formula>Related_Case__r.AccountId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Object Account</label>
    <type>Text</type>
</CustomField>