force-app/main/default/objects/Dialpad__Call_Log__c/listViews/Dialpad_test_Call_Log.listView-meta.xml
<ListView>
    <fullName>Dialpad_test_Call_Log</fullName>
    <filterScope>Queue</filterScope>
    <label>Dialpad test</label>
    <queue>Dialpad_test</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>